# poseidon

./: .clang-format  .gitignore  .projections.json  CMakeLists.txt  README.md  main.cpp  poseidon.sh  run_sample.sh
include/: simple_io_manager.h  simple_parser.h  simple_reader.h  simple_writer.h  trident_reader.h
python/: main.py
samples/: book.ares  book.bgd  book.stream  book1.qry  book2.qry  rdfbook.ares  rdfbook.bgd  rdfbook.qry  rdfbook.stream  rdfbook1.qry  rdfbook2.qry  simple.ares  simple.bgd  simple.qry  simple.stream  website.ares
src/: simple_io_manager.cpp  simple_parser.cpp  simple_reader.cpp  simple_writer.cpp  trident_reader.cpp
twitter/: config.example  harvested20200703.txt  harvester.py  main.py  out.txt  raw_trident.py  triple_extractor.py  twitter.py
